data/tests/typer_error/poly_checking/valid/test1.spl
fun(a, b, c, d) :: a c a c -> Bool {
    return a == c && b == d;
}