data/tests/typer_error/poly_checking/invalid/test3.spl
fun(a, b, c, d) :: a b c d -> Bool {
    return a == c && b == d;
}